@@ -1,3 +1,9 @@
+2016-07-05  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Try to optimise long-vector building by not executing pow() if the exponent would be zero.
+
+	* Split C++ calcValue function into two, to allow re-use of a precalculated long-vector.
+
 2016-06-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Split 'dot product' part of ipol value calculation into a standalone calcValue function.
